# deetoo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  search.py
deetoo/: alembic.ini  app.py  cache.py
deetoo/alembic/: env.py
deetoo/alembic/versions/: 391146e0ffcd_create_tables.py
deetoo/data/: generate.py  seed.py  seed_db.py  seed_v3.py
deetoo/data/csv/: belt.csv  boots.csv  gloves.csv  helm.csv  jewelry.csv  miscellaneous.csv  set_items.csv  shield.csv  throw_weapon.csv  torso.csv  two_handed_weapon.csv  uniques.csv  weapon.csv
deetoo/models/: __init__.py  base.py  db.py  item.py  schema.py  serialize.py  set.py  unique.py  uniques.py
deetoo/models/v2/: __init__.py  db.py  item.py
deetoo/models/v3/: __init__.py  item.py
deetoo/tests/: test_db.py  test_items.py
